improved style and interface

--- a/PrimaryPipelineSetup/sections/step1_Extra_Utilities.html
+++ b/PrimaryPipelineSetup/sections/step1_Extra_Utilities.html
@@ -1,4 +1,13 @@
-<h2 id="topPage">Extra Utilities for local Installation Version (Docker/Docker-free)</h2>
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step1')"> Pipeline Setup</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step1_Extra_Utilities')" style="color:darkgrey">Pipeline Extra Utilities</button>
+</nav>
+<div id="topPage"></div>
+
+<h2>Extra Utilities for local Installation Version (Docker/Docker-free)</h2>
 <p>These utilities can be run in the same way as the main Rhapsody&trade; Sequence Analysis Pipeline.</p>
 <ul>
     <li>The same Docker Image will be used to run these extra utlities.</li>
@@ -52,7 +61,10 @@
         </li>
     </ol></li></ul>
     <br><br>
-    <button style="float: right;"><a href="#topPage" style="color:white;">Go to the top page</a></button>
+    <div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
+</div>
+
 </card>
 <card>
     <h3 id="extraUtil2">PhiX Contamination Detection</h3>
@@ -75,7 +87,9 @@
             <li><b>(Optional) Threads:</b> Integer<br> The number of threads to use. By default, all available cores are used.</li>
         </ol></li>
     </ul>
-    <button style="float: right;"><a href="#topPage" style="color:white;">Go to the top page</a></button>
+    <div class="scroll-top">
+        <button><a href="#topPage">Scroll to top page</a></button>
+    </div>
 </card>
 <br><br>
 <card style="background-color: #f1f1f1;">
@@ -99,6 +113,10 @@
                 </ol></li>
             </li>
     </ul>
-    <button style="float: right;"><a href="#topPage" style="color:white;">Go to the top page</a></button>
+    
 </card>
+</div>
+
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
 </div>
