--- a/PrimaryPipelineSetup/sections/step2_CLI_(Windows).html
+++ b/PrimaryPipelineSetup/sections/step2_CLI_(Windows).html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step2')"> Files Upload</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step2_CLI_(Windows)')" style="color:darkgrey">Command Line Interface Upload Windows OS</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>Command Line Interface Upload (Windows)</h2>
             <div class="notice">
                 There are TWO main steps to setup your file upload through Command Line Interface (CLI). 
@@ -79,4 +88,8 @@
                 <div class="video-container" >
                     <video style="width: 500px;" controls poster = "./assets/videos/sbConfigure_FileUpload.png">
                     <source src="./assets/videos/sbConfigure_FileUpload.mov" type="video/mp4"></video></div>
+            </div>
+
+            <div class="scroll-top">
+                <button><a href="#topPage">Scroll to top page</a></button>
             </div>
