--- a/PrimaryPipelineSetup/sections/step2_Cloud_Based_Upload.html
+++ b/PrimaryPipelineSetup/sections/step2_Cloud_Based_Upload.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step2')"> Files Upload</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step2_Cloud_Based_Upload')" style="color:darkgrey">Velsera Interface Files Upload</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>How to Upload your files on Velsera</h2>
 <h3>Click below to jump straight to the section:</h3>
 <ul>
@@ -105,4 +114,8 @@ Note:<br> <ul>
     </li>
     <li>If the file is corrupted, please reupload your fastq files. </li>
 </ol>
+</div>
+
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
 </div>
