--- a/PrimaryPipelineSetup/sections/step3_AbSeq_Custom_Reference.html
+++ b/PrimaryPipelineSetup/sections/step3_AbSeq_Custom_Reference.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step3')"> Reference Input Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step3_AbSeq_Custom_Reference')" style="color:darkgrey">Custom Reference: AbSeq</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>AbSeq Reference</h2>
 
 <p>AbSeq Reference is a feature that allows you to upload your own reference files to the BD Rhapsody&trade; Pipeline. This feature is useful when you have a custom AbSeq as well as pre-designed panels.</p>
@@ -18,3 +27,7 @@
     <li>The format of the output file is in FASTA format. The image below shows a screenshot of the file. You may now proceed to use the file as AbSeq Reference input. <br>
         <img class="steps-img" src="./assets/images/AbSeq_fasta.png" alt="FASTA File"></li>
 </ul>
+
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
+</div>
