--- a/PrimaryPipelineSetup/sections/step5_ATAC_DataTables.html
+++ b/PrimaryPipelineSetup/sections/step5_ATAC_DataTables.html
@@ -1,4 +1,13 @@
-<h4 id="atacCellByPeak">ATAC Cell-by-Peak Data Tables</h4>
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step5')"> Pipeline Output Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step5_ATAC_DataTables')" style="color:darkgrey">ATAC: Data Tables</button>
+</nav>
+<div id="topPage"></div>
+
+<h2 id="atacCellByPeak">ATAC Cell-by-Peak Data Tables</h2>
 <div class="code"><ul>
     <li><b>Files containing putative cells only:</b><br>[sample_name]_ATAC_Cell_by_Peak_MEX.zip</li>
     <li><b>Unfiltered file containing all cell indexes with >=1 transposase sites in peaks:</b><br>[sample_name]_ATAC_Cell_by_Peak_Unfiltered_MEX.zip</li>
@@ -32,6 +41,7 @@
     </ul>
 </p>
 <br>
-<button onclick="loadSteps('step5')" style="float: right;">Back to Previous Page</button>
-<br><br>
 
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
+</div>
