--- a/PrimaryPipelineSetup/sections/step5_ATAC_Peaks_Annotation.html
+++ b/PrimaryPipelineSetup/sections/step5_ATAC_Peaks_Annotation.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step5')"> Pipeline Output Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step5_ATAC_Peaks_Annotation')" style="color:darkgrey">ATAC: Peaks Annotation</button>
+</nav>
+<div id="topPage"></div>
+
 <h2 id="atacPeaksAnnotation">ATAC Peaks Annotation</h2>
 <div class="code"><ul>
     <li>[sample_name]_ATAC_Peaks_Annotation.bed.gz</li>
@@ -56,5 +65,7 @@
         <td>End coordinate of the peak</td> 
 </table>
 <br>
-<button onclick="loadSteps('step5')" style="float: right;">Back to Previous Page</button>
-<br><br>
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
+</div>
+
