--- a/PrimaryPipelineSetup/sections/step5_Seurat_Cellismo_H5MU.html
+++ b/PrimaryPipelineSetup/sections/step5_Seurat_Cellismo_H5MU.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step5')"> Pipeline Output Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step5_Seurat_Cellismo_H5MU')" style="color:darkgrey">Seurat/Cellismo/H5MU</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>Seurat and Other Single-Cell Analysis Files</h2>
 <div class="code">
     File Types:<br>
@@ -46,3 +55,7 @@
     <li><b>Seurat</b>: Built into separate "assay" objects  ("RNA", "ADT", and "peaks")</li>
     <li><b>MuData</b>: ("rna", "prot", and "atac") respective data structures</li>
 </p>
+
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
+</div>
