--- a/PrimaryPipelineSetup/sections/step1_Docker_Based(LINUX).html
+++ b/PrimaryPipelineSetup/sections/step1_Docker_Based(LINUX).html
@@ -1,13 +1,13 @@
-<nav class="breadcrumb">
+<nav class="breadcrumb" >
     <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
-    <button onclick="loadStep('step1')">/ Pipeline Setup</button>
+    <button onclick="loadStep('step1')"> Pipeline Setup</button>
     <span>&rsaquo;</span>
-    <button onclick="loadSection('step1_Docker_Based(LINUX)')">LINUX</button>
+    <button onclick="loadSection('step1_Docker_Based(LINUX)')" style="color:darkgrey">LINUX Installation</button>
 </nav>
+<div id="topPage"></div>
 
-
-<h2>Local Installation on LINUX</h2>
+<h2 >Local Installation on LINUX</h2>
 <div class="notice tree">
     <ul>
         <li>The docker image features require root-level access to install.</li>
@@ -90,3 +90,6 @@ Please continue to CWL runner installation for MasOS and LINUX systems.</p>
 <li>The pull command automatically fetches the latest version of the pipeline. If you wish to download an earlier version, specify the version number in the following manner:</li>
 <p class="code">docker pull bdgenomics/rhapsody:v1.0</p>
 </ol></div>
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
+</div>
