--- a/PrimaryPipelineSetup/sections/step1_Docker_Based(MacOS).html
+++ b/PrimaryPipelineSetup/sections/step1_Docker_Based(MacOS).html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step1')"> Pipeline Setup</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step1_Docker_Based(MacOS)')" style="color:darkgrey">MacOS Installation</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>Local Installation on MacOS</h2>
 
 <div class="notice tree">
@@ -93,4 +102,7 @@
                             <p class="code">docker images</p>
                             <li>The pull command automatically fetches the latest version of the pipeline. If you wish to download an earlier version, specify the version number in the following manner:</li>
                             <p class="code">docker pull bdgenomics/rhapsody:v1.0</p></ol></div>
+            </div>
+            <div class="scroll-top">
+                <button><a href="#topPage">Scroll to top page</a></button>
             </div>
