--- a/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
+++ b/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step3')"> Reference Input Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step3_Reference_Selector_Tool')" style="color:darkgrey">Reference Tools</button>
+</nav>
+<div id="topPage"></div>
+
 <div id="refCheckbox" class="section active">
     <h2>Reference File Information</h2>
     <div class="checkbox-section">
@@ -168,4 +177,8 @@
                                 <li>The pipeline automatically adds the Sample Tag sequences to the FASTA reference file.</li>
                             </ul>
                         </p>
+                    </div>
+
+                    <div class="scroll-top">
+                        <button><a href="#topPage">Scroll to top page</a></button>
                     </div>
