--- a/PrimaryPipelineSetup/sections/step4_Other_Pipeline_Settings.html
+++ b/PrimaryPipelineSetup/sections/step4_Other_Pipeline_Settings.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step4')"> Pipeline Run Settings</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step4_Other_Pipeline_Settings')" style="color:darkgrey">Other Pipeline Settings</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>Other Settings Option</h2>
                 <p>Below are the additional settings available within the pipeline: </p>
                     
@@ -88,3 +97,7 @@
                                 <p class="code">Maximum_Threads: 16</p></p></li>
                         </div>
                     </ul>
+
+                    <div class="scroll-top">
+                        <button><a href="#topPage">Scroll to top page</a></button>
+                    </div>
