--- a/PrimaryPipelineSetup/sections/step5_ATAC_Metrics.html
+++ b/PrimaryPipelineSetup/sections/step5_ATAC_Metrics.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step5')"> Pipeline Output Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step5_ATAC_Metrics')" style="color:darkgrey">ATAC: Metrics</button>
+</nav>
+<div id="topPage"></div>
+
 <h2 id="atacMetrics">ATAC Metrics</h2>
 
 <div class="code"><ul>
@@ -303,5 +312,7 @@
         <td>Percentage of ATAC reads from putative cells that non-redundantly identify an ATAC fragment</td>
         <td>Library quality<br>Sequencing depth</td>
 </table><br>
-<button onclick="loadSteps('step5')" style="float: right;">Back to Previous Page</button>
-<br><br>
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
+</div>
+
