--- a/PrimaryPipelineSetup/sections/step5_Bioproduct_Statistics.html
+++ b/PrimaryPipelineSetup/sections/step5_Bioproduct_Statistics.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step5')"> Pipeline Output Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step5_Bioproduct_Statistics')" style="color:darkgrey">Bioproduct Statistics</button>
+</nav>
+<div id="topPage"></div>
+
 
 <h2>Bioproduct Statistics</h2>
 
@@ -86,4 +95,6 @@
                 </tr>
             </table>
 
-            <button onclick="loadSteps('step5')">Back to Previous Page</button>
+            <div class="scroll-top">
+                <button><a href="#topPage">Scroll to top page</a></button>
+            </div>
