--- a/PrimaryPipelineSetup/sections/step5_Immune_Cell_Classification.html
+++ b/PrimaryPipelineSetup/sections/step5_Immune_Cell_Classification.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step5')"> Pipeline Output Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step5_Immune_Cell_Classification')" style="color:darkgrey">Immune Cell Classification</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>Immune Cell Classification</h2>
         <p class="code">File: [sample_name]_(assay)_cell_type_experimental.csv</p>
         <p>These files contain the immune cell classification results. The classification is based on the expression of specific genes and is used to identify different immune cell types.
@@ -25,4 +34,6 @@
             </ul>
         </p>
 
-        <button onclick="loadSteps('step5')">Back to Previous Page</button>
+        <div class="scroll-top">
+            <button><a href="#topPage">Scroll to top page</a></button>
+        </div>
