--- a/PrimaryPipelineSetup/sections/step5_Metrics_Summary.html
+++ b/PrimaryPipelineSetup/sections/step5_Metrics_Summary.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step5')"> Pipeline Output Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step5_Metrics_Summary')" style="color:darkgrey">Metrics Summary</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>Metrics Summary:</h2>
         <p class="code">File: [sample_name]_Metrics_Summary.csv</p>
         <p>The metrics summary provides details on sequencing, molecules, cells, and bioproduct statistics.
@@ -416,5 +425,6 @@
             </table>
 
             <br>
-<button onclick="loadSteps('step5')" style="float: right;">Back to Previous Page</button>
-<br><br>
+            <div class="scroll-top">
+                <button><a href="#topPage">Scroll to top page</a></button>
+            </div>
