--- a/PrimaryPipelineSetup/sections/step5_VDJ_Contigs_AIRR.html
+++ b/PrimaryPipelineSetup/sections/step5_VDJ_Contigs_AIRR.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step5')"> Pipeline Output Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step5_VDJ_Contigs_AIRR')" style="color:darkgrey">VDJ Contigs AIRR</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>VDJ Dominant Contigs AIRR</h2>
 <div class="code">
 <p>File: [sample_name]_VDJ_Dominant_Contigs_AIRR.tsv</p>
@@ -401,4 +410,8 @@
         <td>Cell viability<br>mRNA panel</td>
     </tr>
 </table>
+
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
+</div>
 
