--- a/PrimaryPipelineSetup/steps/step2.html
+++ b/PrimaryPipelineSetup/steps/step2.html
@@ -1,3 +1,9 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step2')" style="color:darkgrey"> Files Upload</button>
+</nav>
+
 <h2>Upload Files to Velsera Platfrom</h2>
 
 <h3>For Local Installation Users:</h3>
