--- a/PrimaryPipelineSetup/steps/step3.html
+++ b/PrimaryPipelineSetup/steps/step3.html
@@ -1,3 +1,9 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step2')" style="color:darkgrey"> Reference Files</button>
+</nav>
+
 <h2>Reference Files</h2>
 
 <h3>What is this Chapter for?</h3>
