testing release 30th April

--- a/PrimaryPipelineSetup/sections/step1_Pipeline_Bundle.html
+++ b/PrimaryPipelineSetup/sections/step1_Pipeline_Bundle.html
@@ -6,6 +6,11 @@
     <button onclick="loadSection('step1_Pipeline_Bundle')" style="color:darkgrey">Pipeline Bundle Installation</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2>Pipeline Bundle (Docker free - LINUX only)</h2>
 
