--- a/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
+++ b/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
@@ -6,6 +6,11 @@
     <button onclick="loadSection('step3_Reference_Selector_Tool')" style="color:darkgrey">Reference Tools</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <div id="refCheckbox" class="section active">
     <h2>Reference File Information</h2>
