--- a/PrimaryPipelineSetup/sections/step4_Other_Pipeline_Settings.html
+++ b/PrimaryPipelineSetup/sections/step4_Other_Pipeline_Settings.html
@@ -6,6 +6,11 @@
     <button onclick="loadSection('step4_Other_Pipeline_Settings')" style="color:darkgrey">Other Pipeline Settings</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2>Other Settings Option</h2>
                 <p>Below are the additional settings available within the pipeline: </p>
