--- a/PrimaryPipelineSetup/sections/step5_ATAC_Peaks.html
+++ b/PrimaryPipelineSetup/sections/step5_ATAC_Peaks.html
@@ -6,6 +6,11 @@
     <button onclick="loadSection('step5_ATAC_Peaks')" style="color:darkgrey">ATAC: Peaks</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2 id="atacPeaks">ATAC Peaks and Index file</h2>
 <div class="code"><ul>
