--- a/PrimaryPipelineSetup/sections/step5_ATAC_Transposase_Sites.html
+++ b/PrimaryPipelineSetup/sections/step5_ATAC_Transposase_Sites.html
@@ -6,6 +6,11 @@
     <button onclick="loadSection('step5_ATAC_Transposase_Sites')" style="color:darkgrey">ATAC: Transposase Sites</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2 id="atacTransposase">ATAC Transposase Sites and Index file</h2>
 
