--- a/PrimaryPipelineSetup/sections/step5_Bioproduct_Statistics.html
+++ b/PrimaryPipelineSetup/sections/step5_Bioproduct_Statistics.html
@@ -6,6 +6,16 @@
     <button onclick="loadSection('step5_Bioproduct_Statistics')" style="color:darkgrey">Bioproduct Statistics</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 
 <h2>Bioproduct Statistics</h2>
