--- a/PrimaryPipelineSetup/sections/step5_Data_Tables.html
+++ b/PrimaryPipelineSetup/sections/step5_Data_Tables.html
@@ -6,6 +6,11 @@
     <button onclick="loadSection('step5_Data_Tables')" style="color:darkgrey">Data Tables (MEX)</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2>Data Tables</h2>
         
