--- a/PrimaryPipelineSetup/sections/step5_Immune_Cell_Classification.html
+++ b/PrimaryPipelineSetup/sections/step5_Immune_Cell_Classification.html
@@ -6,6 +6,11 @@
     <button onclick="loadSection('step5_Immune_Cell_Classification')" style="color:darkgrey">Immune Cell Classification</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2>Immune Cell Classification</h2>
         <p class="code">File: [sample_name]_(assay)_cell_type_experimental.csv</p>
