--- a/PrimaryPipelineSetup/steps/step1.html
+++ b/PrimaryPipelineSetup/steps/step1.html
@@ -45,3 +45,9 @@
 <li><b><a onclick="loadSection('step1_Extra_Utilities')">Annotate Cell Label and UMI only: </a></b><br>Given pairs of R1/R2 FASTQ files from BD Rhapsody&trade; libraries, only annotate the cell label and UMI of R1 and put it in the header of R2.</li>
 </ul></div>
 </div>
+
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
