--- a/PrimaryPipelineSetup/steps/step2.html
+++ b/PrimaryPipelineSetup/steps/step2.html
@@ -24,3 +24,8 @@
 </p>
 
 
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
