--- a/PrimaryPipelineSetup/steps/step5.html
+++ b/PrimaryPipelineSetup/steps/step5.html
@@ -100,3 +100,9 @@
 </details>
 
 </div>
+
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
