--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -101,11 +101,12 @@
                         <button href="#" onclick="loadSection('step5_SMK_ReadsPerCell')">SMK Reads</button><br>
                         <button href="#" onclick="loadSection('step5_SMK_PerSample_Folder')">SMK Persample Folder</button><br><br>
                         <button href="#" onclick="loadSection('step5_VDJ_Metrics')">VDJ Metrics</button><br>
-
                         <button href="#" onclick="loadSection('step5_VDJ_PerCell')">VDJ Per Cell</button><br>
                         <button href="#" onclick="loadSection('step5_VDJ_Contigs_AIRR')">AIRR</button><br>
                     </div>
-                </div>
+                
+                <button class="nav-button" onclick="loadStep('feedback')">Leave us your thoughts</button>
+            </div>
         </nav>
 
             <!-- Middle Section: Main content -->
