--- a/PrimaryPipelineSetup/sections/step3_AbSeq_Custom_Reference.html
+++ b/PrimaryPipelineSetup/sections/step3_AbSeq_Custom_Reference.html
@@ -6,6 +6,11 @@
     <button onclick="loadSection('step3_AbSeq_Custom_Reference')" style="color:darkgrey">Custom Reference: AbSeq</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2>AbSeq Reference</h2>
 
