--- a/PrimaryPipelineSetup/sections/step4_Run_on_Velsera.html
+++ b/PrimaryPipelineSetup/sections/step4_Run_on_Velsera.html
@@ -6,6 +6,11 @@
     <button onclick="loadSection('step4_Run_on_Velsera')" style="color:darkgrey">Velsera Pipeline Settings</button>
 </nav>
 <div id="topPage"></div>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 
 <h2>Select your assay combination to view example input files and pipeline settings.</h2>
@@ -26,8 +31,4 @@
     
     <div class="scroll">
         <img class="ref-img" id="defaultImage" src="./assets/images/SBsetup_WTA.png" width="900">
-    </div>
-    
-    <div class="scroll-top">
-        <button><a href="#topPage">Scroll to top page</a></button>
     </div>
